cp: 	PR c++/19608 	* parser.c (cp_parser_late_parsing_for_member): Use 	current_function_decl as scope to push to and from. testsuite: 	PR c++/19608 	* g++.dg/parse/local-class1.C: New.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@95036 138bc75d-0d04-0410-961f-82ee72b054a4